fix some text-elements

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ a {
   letter-spacing: 0.21px;
   color: #ffffff;
   text-transform: capitalize;
+  text-align: center;
 }
 
 .hero {
@@ -579,7 +580,12 @@ a {
 
 @media (max-width: 580px) {
   .get-in__title {
-    font-size: 70px;
+    font-size: 65px;
+  }
+  .footer__nav {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
