--- a/style.scss
+++ b/style.scss
@@ -412,8 +412,13 @@ a {
 }
 
 @include extra-small {
+  .hero__logo {
+    max-width: 320px;
+  }
+
   .get-in__title {
-    font-size: 65px;
+    max-width: 320px;
+    font-size: 50px;
   }
 
   .footer__nav {
